--- a/hack/deploy/mutating-webhook.yaml
+++ b/hack/deploy/mutating-webhook.yaml
@@ -1,25 +1,25 @@
 apiVersion: admissionregistration.k8s.io/v1beta1
-kind: ValidatingWebhookConfiguration
+kind: MutatingWebhookConfiguration
 metadata:
-  name: validators.kubevault.com
+  name: mutators.kubevault.com
   labels:
     app: vault-operator
 webhooks:
-- name: vaultservers.validators.kubevault.com
+- name: vaultpolicybindings.mutators.kubevault.com
   clientConfig:
     service:
       namespace: default
       name: kubernetes
-      path: /apis/validators.kubevault.com/v1alpha1/vaultservers
+      path: /apis/mutators.kubevault.com/v1alpha1/vaultpolicybindings
     caBundle: ${KUBE_CA}
   rules:
   - operations:
     - CREATE
     - UPDATE
     apiGroups:
-    - kubevault.com
+    - policy.kubevault.com
     apiVersions:
     - "*"
     resources:
-    - vaultservers
+    - vaultpolicybindings
   failurePolicy: Fail
