--- a/.github/workflows/update-crds.yaml
+++ b/.github/workflows/update-crds.yaml
@@ -10,10 +10,10 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.15
+      - name: Set up Go 1.16
         uses: actions/setup-go@v1
         with:
-          go-version: 1.15
+          go-version: 1.16
         id: go
 
       - uses: actions/checkout@v1
@@ -49,5 +49,5 @@ jobs:
           INSTALLER_REPOSITORY: ${{ secrets.INSTALLER_REPOSITORY }}
         run: |
           export INSTALLER_ROOT=$RUNNER_WORKSPACE/$(basename $INSTALLER_REPOSITORY)
-          crd-importer --input=./crds --out=$INSTALLER_ROOT/charts/kubevault-crds/crds --v=v1
+          $INSTALLER_ROOT/hack/scripts/import-crds.sh
           $INSTALLER_ROOT/hack/scripts/open-pr.sh
