--- a/crds/kubevault.com_vaultservers.v1.yaml
+++ b/crds/kubevault.com_vaultservers.v1.yaml
@@ -5213,7 +5213,7 @@ spec:
                     type: object
                 type: object
               replicas:
-                description: Number of instances to deploy for a MongoDB database.
+                description: Number of instances to deploy for a VaultServer.
                 format: int32
                 type: integer
               serviceTemplates:
@@ -5225,7 +5225,7 @@ spec:
                       description: Alias represents the identifier of the service.
                       enum:
                       - primary
-                      - standby
+                      - vault
                       - stats
                       type: string
                     metadata:
@@ -5662,7 +5662,7 @@ spec:
                     type: boolean
                 type: object
               version:
-                description: Version of MongoDB to be deployed.
+                description: Version of VaultServer to be deployed.
                 type: string
             required:
             - backend
