--- a/crds/kubevault.com_vaultservers.v1.yaml
+++ b/crds/kubevault.com_vaultservers.v1.yaml
@@ -5224,7 +5224,7 @@ spec:
                     alias:
                       description: Alias represents the identifier of the service.
                       enum:
-                      - primary
+                      - internal
                       - vault
                       - stats
                       type: string
