--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,27 @@ jobs:
       - name: Run checks
         run: |
           make ci
+
+  kubernetes:
+    name: Kubernetes
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        k8s: [v1.16.15, v1.17.17, v1.18.15, v1.19.7, v1.20.2, v1.21.1]
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Create Kubernetes ${{ matrix.k8s }} cluster
+        id: kind
+        uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: v0.11.1
+          image: kindest/node:${{ matrix.k8s }}
+
+      - name: Test crds
+        run: |
+          echo "waiting for nodes to be ready ..."
+          kubectl wait --for=condition=Ready nodes --all --timeout=5m
+          kubectl get nodes
+          kubectl create -R -f ./crds
