Redesign secret engine crds for self-service mode
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/crds/engine.kubevault.com_gcproles.yaml
+++ b/crds/engine.kubevault.com_gcproles.yaml
@@ -88,7 +88,7 @@ spec:
           status:
             properties:
               conditions:
-                description: Represents the latest available observations of a GCPRole
+                description: Represents the latest available observations of a MySQLRole
                   current state.
                 items:
                   properties:
@@ -137,12 +137,25 @@ spec:
                 type: array
               observedGeneration:
                 description: ObservedGeneration is the most recent generation observed
-                  for this GCPRole. It corresponds to the GCPRole's generation, which
-                  is updated on mutation by the API Server.
+                  for this MySQLRole. It corresponds to the MySQLRole's generation,
+                  which is updated on mutation by the API Server.
                 format: int64
                 type: integer
               phase:
                 type: string
+              policyRef:
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
+                properties:
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                required:
+                - name
+                type: object
             type: object
         type: object
     served: true
