--- a/crds/engine.kubevault.com_secretrolebindings.yaml
+++ b/crds/engine.kubevault.com_secretrolebindings.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: kubevault
-  name: databaseaccessrequests.engine.kubevault.com
+  name: secretrolebindings.engine.kubevault.com
 spec:
   group: engine.kubevault.com
   names:
@@ -12,10 +12,10 @@ spec:
     - vault
     - appscode
     - all
-    kind: DatabaseAccessRequest
-    listKind: DatabaseAccessRequestList
-    plural: databaseaccessrequests
-    singular: databaseaccessrequest
+    kind: SecretRoleBinding
+    listKind: SecretRoleBindingList
+    plural: secretrolebindings
+    singular: secretrolebinding
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -42,29 +42,32 @@ spec:
           metadata:
             type: object
           spec:
-            description: DatabaseAccessRequestSpec contains information to request
-              for database credential
+            description: SecretRoleBindingSpec contains information to request for
+              database credential
             properties:
-              roleRef:
-                description: Contains vault database role info
-                properties:
-                  apiGroup:
-                    description: APIGroup is the group for the resource being referenced
-                    type: string
-                  kind:
-                    description: Kind is the type of resource being referenced
-                    type: string
-                  name:
-                    description: Name is the name of resource being referenced
-                    type: string
-                  namespace:
-                    description: Namespace is the namespace of the resource being
-                      referenced
-                    type: string
-                required:
-                - name
-                - namespace
-                type: object
+              roles:
+                items:
+                  description: TypedLocalObjectReference contains enough information
+                    to let you locate the typed referenced object inside the same
+                    namespace.
+                  properties:
+                    apiGroup:
+                      description: APIGroup is the group for the resource being referenced.
+                        If APIGroup is not specified, the specified Kind must be in
+                        the core API group. For any other third-party types, APIGroup
+                        is required.
+                      type: string
+                    kind:
+                      description: Kind is the type of resource being referenced
+                      type: string
+                    name:
+                      description: Name is the name of resource being referenced
+                      type: string
+                  required:
+                  - kind
+                  - name
+                  type: object
+                type: array
               subjects:
                 items:
                   description: Subject contains a reference to the object or user
@@ -96,13 +99,8 @@ spec:
                   - name
                   type: object
                 type: array
-              ttl:
-                description: Specifies the TTL for the leases associated with this
-                  role. Accepts time suffixed strings ("1h") or an integer number
-                  of seconds. Defaults to roles default TTL time
-                type: string
             required:
-            - roleRef
+            - roles
             - subjects
             type: object
           status:
@@ -175,15 +173,33 @@ spec:
                 format: int64
                 type: integer
               phase:
-                description: Specifies the phase of DatabaseAccessRequest object
+                description: Specifies the phase of SecretRoleBinding object
                 type: string
-              secret:
-                description: Name of the secret containing database credentials
+              policyBindingRef:
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
                 properties:
                   name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                      TODO: Add other useful fields. apiVersion, kind, uid?'
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                     type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                required:
+                - name
+                type: object
+              policyRef:
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
+                properties:
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                required:
+                - name
                 type: object
             type: object
         type: object
