--- a/crds/engine.kubevault.com_secretaccessrequests.yaml
+++ b/crds/engine.kubevault.com_secretaccessrequests.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: kubevault
-  name: awsaccesskeyrequests.engine.kubevault.com
+  name: secretaccessrequests.engine.kubevault.com
 spec:
   group: engine.kubevault.com
   names:
@@ -12,10 +12,10 @@ spec:
     - vault
     - appscode
     - all
-    kind: AWSAccessKeyRequest
-    listKind: AWSAccessKeyRequestList
-    plural: awsaccesskeyrequests
-    singular: awsaccesskeyrequest
+    kind: SecretAccessRequest
+    listKind: SecretAccessRequestList
+    plural: secretaccessrequests
+    singular: secretaccessrequest
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -42,21 +42,49 @@ spec:
           metadata:
             type: object
           spec:
-            description: https://www.vaultproject.io/api/secret/aws/index.html#parameters-6
-              AWSAccessKeyRequestSpec contains information to request for vault aws
-              credential
+            description: SecretAccessRequestSpec contains information to request for
+              database credential
             properties:
-              roleARN:
-                description: The ARN of the role to assume if credential_type on the
-                  Vault role is assumed_role. Must match one of the allowed role ARNs
-                  in the Vault role. Optional if the Vault role only allows a single
-                  AWS role ARN; required otherwise.
-                type: string
+              aws:
+                description: https://www.vaultproject.io/api/secret/aws/index.html#parameters-6
+                  AWSAccessKeyRequestSpec contains information to request for vault
+                  aws credential
+                properties:
+                  roleARN:
+                    description: The ARN of the role to assume if credential_type
+                      on the Vault role is assumed_role. Must match one of the allowed
+                      role ARNs in the Vault role. Optional if the Vault role only
+                      allows a single AWS role ARN; required otherwise.
+                    type: string
+                  useSTS:
+                    description: If true, '/aws/sts' endpoint will be used to retrieve
+                      credential Otherwise, '/aws/creds' endpoint will be used to
+                      retrieve credential
+                    type: boolean
+                type: object
+              gcp:
+                description: GCPAccessRequestConfiguration contains information to
+                  request for vault gcp credentials
+                properties:
+                  keyAlgorithm:
+                    description: 'Specifies the algorithm used to generate key. Defaults
+                      to 2k RSA key. Accepted values: KEY_ALG_UNSPECIFIED, KEY_ALG_RSA_1024,
+                      KEY_ALG_RSA_2048'
+                    type: string
+                  keyType:
+                    description: 'Specifies the private key type to generate. Defaults
+                      to JSON credentials file Accepted values: TYPE_UNSPECIFIED,
+                      TYPE_PKCS12_FILE, TYPE_GOOGLE_CREDENTIALS_FILE'
+                    type: string
+                type: object
               roleRef:
-                description: Contains vault aws role info
+                description: Contains vault database role info
                 properties:
                   apiGroup:
-                    description: APIGroup is the group for the resource being referenced
+                    description: APIGroup is the group for the resource being referenced.
+                      If APIGroup is not specified, the specified Kind must be in
+                      the core API group. For any other third-party types, APIGroup
+                      is required.
                     type: string
                   kind:
                     description: Kind is the type of resource being referenced
@@ -64,13 +92,21 @@ spec:
                   name:
                     description: Name is the name of resource being referenced
                     type: string
+                required:
+                - kind
+                - name
+                type: object
+              secret:
+                description: Name of the secret containing secret engine role credentials
+                properties:
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
                   namespace:
-                    description: Namespace is the namespace of the resource being
-                      referenced
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
                     type: string
                 required:
                 - name
-                - namespace
                 type: object
               subjects:
                 items:
@@ -104,21 +140,10 @@ spec:
                   type: object
                 type: array
               ttl:
-                description: Specifies the TTL for the use of the STS token. This
-                  is specified as a string with a duration suffix. Valid only when
-                  credential_type is assumed_role or federation_token. When not specified,
-                  the default_sts_ttl set for the role will be used. If that is also
-                  not set, then the default value of 3600s will be used. AWS places
-                  limits on the maximum TTL allowed. See the AWS documentation on
-                  the DurationSeconds parameter for AssumeRole (for assumed_role credential
-                  types) and GetFederationToken (for federation_token credential types)
-                  for more details.
+                description: Specifies the TTL for the leases associated with this
+                  role. Accepts time suffixed strings ("1h") or an integer number
+                  of seconds. Defaults to roles default TTL time
                 type: string
-              useSTS:
-                description: If true, '/aws/sts' endpoint will be used to retrieve
-                  credential Otherwise, '/aws/creds' endpoint will be used to retrieve
-                  credential
-                type: boolean
             required:
             - roleRef
             - subjects
@@ -193,16 +218,8 @@ spec:
                 format: int64
                 type: integer
               phase:
-                description: Specifies the phase of AWSAccessKeyRequestStatus object
+                description: Specifies the phase of SecretAccessRequest object
                 type: string
-              secret:
-                description: Name of the secret containing AWSCredential AWSCredentials
-                properties:
-                  name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                      TODO: Add other useful fields. apiVersion, kind, uid?'
-                    type: string
-                type: object
             type: object
         type: object
     served: true
