--- a/crds/engine.kubevault.com_secretengines.yaml
+++ b/crds/engine.kubevault.com_secretengines.yaml
@@ -330,6 +330,7 @@ spec:
                 type: object
               path:
                 description: Path defines the path used to enable this secret engine
+                  Visible to user but immutable
                 type: string
               postgres:
                 description: PostgresConfiguration defines a PostgreSQL app configuration.
@@ -388,13 +389,17 @@ spec:
                 - databaseRef
                 type: object
               vaultRef:
-                description: LocalObjectReference contains enough information to let
-                  you locate the referenced object inside the same namespace.
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
                 properties:
                   name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                      TODO: Add other useful fields. apiVersion, kind, uid?'
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                     type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                required:
+                - name
                 type: object
             required:
             - vaultRef
