gcprole spec updated with new secretengineref
Signed-off-by: sakibalamin <sakibalamin@appscode.com>

--- a/crds/engine.kubevault.com_gcproles.yaml
+++ b/crds/engine.kubevault.com_gcproles.yaml
@@ -57,6 +57,14 @@ spec:
                 description: Name of the GCP project that this roleset's service account
                   will belong to. Cannot be updated.
                 type: string
+              secretEngineRef:
+                description: SecretEngineRef is the name of a Secret Engine
+                properties:
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      TODO: Add other useful fields. apiVersion, kind, uid?'
+                    type: string
+                type: object
               secretType:
                 description: Specifies the type of secret generated for this role
                   set
@@ -70,20 +78,11 @@ spec:
                 items:
                   type: string
                 type: array
-              vaultRef:
-                description: VaultRef is the name of a AppBinding referencing to a
-                  Vault Server
-                properties:
-                  name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                      TODO: Add other useful fields. apiVersion, kind, uid?'
-                    type: string
-                type: object
             required:
             - bindings
             - project
+            - secretEngineRef
             - secretType
-            - vaultRef
             type: object
           status:
             properties:
