--- a/crds/kubevault.com_vaultservers.yaml
+++ b/crds/kubevault.com_vaultservers.yaml
@@ -7575,46 +7575,106 @@ spec:
                       backend storage in vault"
                     properties:
                       address:
-                        description: Specifies the address of the MySQL host.
+                        description: 'Specifies the address of the MySQL host. if
+                          DatabaseRef is set then Address will be generated from it
+                          This must be set if DatabaseRef is empty, validate from
+                          ValidatingWebhook host example: <db-name>.<db-ns>.svc:3306'
+                        type: string
+                      credentialSecretRef:
+                        description: 'Specifies the MySQL username and password to
+                          connect to the database secret data:  - username=<value>  -
+                          password=<value>'
                         type: string
                       database:
                         description: Specifies the name of the database. If the database
                           does not exist, Vault will attempt to create it.
                         type: string
+                      databaseRef:
+                        description: DatabaseRef contains the info of KubeDB managed
+                          Database This will be used to generate the "Address" field
+                        properties:
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                            type: string
+                          namespace:
+                            description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                            type: string
+                        required:
+                        - name
+                        type: object
+                      haEnabled:
+                        description: High Availability Parameter Specifies if high
+                          availability mode is enabled. This is a boolean value, but
+                          it is specified as a string like "true" or "false".
+                        type: string
+                      lockTable:
+                        description: High Availability Parameter Specifies the name
+                          of the table to use for storing high availability information.
+                          By default, this is the name of the table suffixed with
+                          _lock. If the table does not exist, Vault will attempt to
+                          create it.
+                        type: string
+                      maxConnectionLifetime:
+                        description: Specifies the maximum amount of time in seconds
+                          that a connection may be reused. If <= 0s connections are
+                          reused forever.
+                        format: int64
+                        type: integer
+                      maxIdleConnection:
+                        description: Specifies the maximum number of idle connections
+                          to the database. A zero uses value defaults to 2 idle connections
+                          and a negative value disables idle connections. If larger
+                          than max_parallel it will be reduced to be equal.
+                        format: int64
+                        type: integer
                       maxParallel:
                         description: ' Specifies the maximum number of concurrent
                           requests to take place.'
                         format: int64
                         type: integer
+                      plaintextCredentialTransmission:
+                        type: string
                       table:
                         description: Specifies the name of the table. If the table
                           does not exist, Vault will attempt to create it.
                         type: string
-                      tlsCASecret:
+                      tlsSecretRef:
                         description: 'Specifies the name of the secret containing
                           the CA certificate to connect using TLS. secret data:  -
                           tls_ca_file=<ca_cert>'
                         type: string
-                      userCredentialSecret:
-                        description: 'Specifies the MySQL username and password to
-                          connect to the database secret data:  - username=<value>  -
-                          password=<value>'
-                        type: string
                     required:
-                    - userCredentialSecret
+                    - credentialSecretRef
                     type: object
                   postgresql:
                     description: "vault doc: https://www.vaultproject.io/docs/configuration/storage/postgresql.html
                       \n PostgreSQLSpec defines configuration to set up PostgreSQL
                       storage as backend storage in vault"
                     properties:
-                      connectionURLSecret:
+                      credentialSecretRef:
                         description: 'Specifies the name of the secret containing
                           the connection string to use to authenticate and connect
                           to PostgreSQL. A full list of supported parameters can be
                           found in the pq library documentation(https://godoc.org/github.com/lib/pq#hdr-Connection_String_Parameters).
                           secret data:  - connection_url:<data>'
                         type: string
+                      haEnabled:
+                        description: High Availability Parameter Default not enabled,
+                          requires 9.5 or later Specifies if high availability mode
+                          is enabled. This is a boolean value, but it is specified
+                          as a string like "true" or "false".
+                        type: string
+                      haTable:
+                        description: Specifies the name of the table to use for storing
+                          high availability information. This table must already exist
+                          (Vault will not attempt to create it).
+                        type: string
+                      maxIdleConnection:
+                        description: Default not set. Sets the maximum number of connections
+                          in the idle connection pool. See golang docs on SetMaxIdleConns(https://pkg.go.dev/database/sql#DB.SetMaxIdleConns)
+                          for more information. Requires 1.2 or later.
+                        format: int64
+                        type: integer
                       maxParallel:
                         description: ' Specifies the maximum number of concurrent
                           requests to take place.'
@@ -7626,7 +7686,7 @@ spec:
                           attempt to create it).
                         type: string
                     required:
-                    - connectionURLSecret
+                    - credentialSecretRef
                     type: object
                   raft:
                     description: RaftSpec defines the configuration for the Raft integrated
