--- a/crds/kubevault.com_vaultservers.yaml
+++ b/crds/kubevault.com_vaultservers.yaml
@@ -7699,16 +7699,38 @@ spec:
                       storage as backend storage in vault"
                     properties:
                       credentialSecretRef:
-                        description: 'Specifies the name of the secret containing
-                          the connection string to use to authenticate and connect
-                          to PostgreSQL. A full list of supported parameters can be
-                          found in the pq library documentation(https://godoc.org/github.com/lib/pq#hdr-Connection_String_Parameters).
-                          secret data:  - connection_url:<data>'
+                        description: 'Specifies the MySQL username and password to
+                          connect to the database secret data:  - username=<value>  -
+                          password=<value>'
                         properties:
                           name:
                             description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
+                        type: object
+                      databaseRef:
+                        description: DatabaseRef contains the info of KubeDB managed
+                          Database This will be used to generate the "Address" field
+                        properties:
+                          name:
+                            description: '`name` is the name of the app. Required'
+                            type: string
+                          namespace:
+                            description: '`namespace` is the namespace of the app.
+                              Required'
+                            type: string
+                          parameters:
+                            description: "Parameters is a set of the parameters to
+                              be used to override default parameters. The inline YAML/JSON
+                              payload to be translated into equivalent JSON object.
+                              \n The Parameters field is NOT secret or secured in
+                              any way and should NEVER be used to hold sensitive information."
+                            type: object
+                            x-kubernetes-embedded-resource: true
+                            x-kubernetes-preserve-unknown-fields: true
+                        required:
+                        - name
+                        - namespace
                         type: object
                       haEnabled:
                         description: High Availability Parameter Default not enabled,
@@ -7732,6 +7754,12 @@ spec:
                           requests to take place.'
                         format: int64
                         type: integer
+                      sslMode:
+                        description: SSLMode for both standalone and clusters. [disable;verify-full]
+                        enum:
+                        - disable
+                        - verify-full
+                        type: string
                       table:
                         description: Specifies the name of the table in which to write
                           Vault data. This table must already exist (Vault will not
