update config fields
Signed-off-by: sakibalamin <sakibalamin@appscode.com>

--- a/crds/kubevault.com_vaultservers.yaml
+++ b/crds/kubevault.com_vaultservers.yaml
@@ -7072,6 +7072,10 @@ spec:
                           items:
                             type: string
                           type: array
+                        boundIssuer:
+                          description: The value against which to match the iss claim
+                            in a JWT.
+                          type: string
                         credentialSecretRef:
                           description: 'CredentialSecretRef TODO: add keys that could
                             be present'
@@ -7089,6 +7093,26 @@ spec:
                           description: The default role to use if none is provided
                             during login
                           type: string
+                        jwksURL:
+                          description: JWKS URL to use to authenticate signatures.
+                            Cannot be used with "oidc_discovery_url" or "jwt_validation_pubkeys".
+                          type: string
+                        jwtSupportedAlgs:
+                          description: '(comma-separated string, or array of strings:
+                            <optional>) A list of supported signing algorithms. Defaults
+                            to [RS256] for OIDC roles. Defaults to all available algorithms
+                            for JWT roles.'
+                          items:
+                            type: string
+                          type: array
+                        jwtValidationPubkeys:
+                          description: '(comma-separated string, or array of strings:
+                            <optional>) - A list of PEM-encoded public keys to use
+                            to authenticate signatures locally. Cannot be used with
+                            "jwks_url" or "oidc_discovery_url".'
+                          items:
+                            type: string
+                          type: array
                         listingVisibility:
                           description: Speficies whether to show this mount in the
                             UI-specific listing endpoint.
@@ -7205,6 +7229,10 @@ spec:
                           items:
                             type: string
                           type: array
+                        boundIssuer:
+                          description: The value against which to match the iss claim
+                            in a JWT.
+                          type: string
                         credentialSecretRef:
                           description: 'CredentialSecretRef TODO: add keys that could
                             be present'
@@ -7222,6 +7250,26 @@ spec:
                           description: The default role to use if none is provided
                             during login
                           type: string
+                        jwksURL:
+                          description: JWKS URL to use to authenticate signatures.
+                            Cannot be used with "oidc_discovery_url" or "jwt_validation_pubkeys".
+                          type: string
+                        jwtSupportedAlgs:
+                          description: '(comma-separated string, or array of strings:
+                            <optional>) A list of supported signing algorithms. Defaults
+                            to [RS256] for OIDC roles. Defaults to all available algorithms
+                            for JWT roles.'
+                          items:
+                            type: string
+                          type: array
+                        jwtValidationPubkeys:
+                          description: '(comma-separated string, or array of strings:
+                            <optional>) A list of PEM-encoded public keys to use to
+                            authenticate signatures locally. Cannot be used with "jwks_url"
+                            or "oidc_discovery_url".'
+                          items:
+                            type: string
+                          type: array
                         listingVisibility:
                           description: Speficies whether to show this mount in the
                             UI-specific listing endpoint.
